# flexipde

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: discretization.md  examples.md  hasegawa_wakatani.md  index.md  installation.md  models.md  optimization.md  reference.md  two_stream_instability.md  user_guide.md
docs/javascripts/: mathjax.js
examples/: advection.toml  advection_1d.toml  alfven.toml  alfven_1d.toml  cylindrical_diffusion.toml  diffusion_1d.toml  diffusion_2d.toml  diffusion_3d.toml  drift_kinetic.toml  optimise_vlasov_growth.py  optimize_transport_equation.py  resistive_mhd.toml  run_advection.py  run_advection_1d.py  run_alfven.py  run_burgers_2d_custom.py  run_cylindrical_diffusion.py  run_diffusion_1d.py  run_diffusion_2d.py  run_diffusion_3d.py  run_hasegawa_wakatani.py  run_resistive_mhd.py  run_spherical_advection_custom.py  run_vlasov.py  run_vlasov_two_stream.py  vlasov_two_stream.toml
flexipde/: __init__.py  grid.py  io.py  optim.py  result.py  run.py  solver.py
flexipde/discretisation/: __init__.py  base.py  finite_difference.py  spectral.py
flexipde/models/: __init__.py  advection.py  base.py  diffusion.py  drift_kinetic.py  ideal_alfven.py  ideal_mhd.py  resistive_mhd.py  two_fluid.py  vlasov.py
tests/: test_discretisation.py  test_initial_conditions.py  test_io_cli.py  test_manufactured.py  test_models.py  test_optim.py  test_solver.py
