[project]
name = "flexipde"
version = "0.3.0"
description = "Flexible high-performance plasma physics solver in Python using JAX and NumPy"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "UWPlasma", email = "uwplasma@wisc.edu" }]
maintainers = [{ name = "UWPlasma", email = "uwplasma@wisc.edu" }]

license = "MIT"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]

dependencies = ["numpy", "tomli; python_version < '3.11'"]

[project.optional-dependencies]
jax = ["jax", "equinox", "diffrax", "optax", "jaxtyping"]
symbolic = ["sympy2jax"]
docs = ["mkdocs-material", "mkdocstrings-python"]
testing = ["pytest", "pytest-cov", "mypy"]

[build-system]
# keep either this (latest) or pin <77 as discussed earlier
requires = ["setuptools>=77", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["flexipde"]

[tool.setuptools.package-data]
flexipde = ["py.typed"]

[tool.mypy]
ignore_missing_imports = true
exclude = ["examples/*"]

[project.scripts]
flexipde = "flexipde.run:main"
